<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    android:gravity="center"
    tools:context=".LoadingPage">


    <ImageView
        android:id="@+id/animatedImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#B84E4E"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/loading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levitaneec"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/animated" />

    <ImageView
        android:id="@+id/levitaneec"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:contentDescription="@string/levitaneec"
        app:layout_constraintDimensionRatio="16:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/levitaneec" />

    <ImageView
        android:id="@+id/pot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="55dp"
        android:contentDescription="@string/pot"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levitaneec"
        app:layout_constraintVertical_bias="0.377"
        app:srcCompat="@drawable/pot" />

    <ImageView
        android:id="@+id/glow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="128dp"
        android:contentDescription="@string/glow"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/pot"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/pot"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pot"
        app:srcCompat="@drawable/glow" />

    <ImageView
        android:id="@+id/flower"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="272dp"
        android:contentDescription="@string/flower"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/pot"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="@+id/pot"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pot"
        app:srcCompat="@drawable/flower" />

    <ImageView
        android:id="@+id/loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pot"
        app:layout_constraintVertical_bias="0.821"
        app:srcCompat="@drawable/loading" />

    <ImageView
        android:id="@+id/circle1"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/loading_circle"
        app:layout_constraintBottom_toBottomOf="@+id/loading"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toEndOf="@+id/loading"
        app:layout_constraintTop_toTopOf="@+id/loading"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/circle" />

    <ImageView
        android:id="@+id/circle2"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/loading_circle"
        app:layout_constraintBottom_toBottomOf="@+id/loading"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toEndOf="@+id/circle1"
        app:layout_constraintTop_toTopOf="@+id/loading"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/circle" />

    <ImageView
        android:id="@+id/circle3"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/loading_circle"
        app:layout_constraintBottom_toBottomOf="@+id/loading"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toEndOf="@+id/circle2"
        app:layout_constraintTop_toTopOf="@+id/loading"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/circle" />

</androidx.constraintlayout.widget.ConstraintLayout>